--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h3>Score:<span id="score">0</span></h3>
+  <h3>Hi, <span id="username">stranger</span>! Your score:<span id="score">0</span></h3>
+  <button id="changeUsername">Change Username</button>
   <button id="start-button">Start/Pause</button>
   <div class="container"> 
     <div class="grid"></div>
